--- a/Web_development_1/guided-project-1/styles.css
+++ b/Web_development_1/guided-project-1/styles.css
@@ -29,3 +29,16 @@ p span {
     border: 1px solid black;
     text-align: left;
 }
+
+footer {
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 10px;
+    padding: 3px;
+    background-color: orange;
+    color: black;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    left: 0;
+}
